--- a/assets/templates/user.component.html
+++ b/assets/templates/user.component.html
@@ -115,7 +115,7 @@
     <p>{{show_error}}</p>
   </div>
   <div class="biker_sec">
-    <h1>Biker</h1>
+    <h1>Bikers</h1>
     <table class="biker_table" cellpadding="0" cellspacing="0">
       <thead>
         <tr>
@@ -134,7 +134,7 @@
           <td>{{user.city}}</td>
           <td>{{user.ride_in_group}}</td>
           <td>{{user.days | weekdays}}</td>
-          <td>{{user.createdAt | date: 'dd/MM/yyyy h:mm a'}}</td>
+          <td>{{user.createdAt | date: 'dd/MM/yyyy'}} <span>{{user.createdAt | date: 'h:mm a'}}</span></td>
           <td class='delet_icon'><a href="javascript:void(0);" (click)='deleteUser(user, i);'><i class='far fa-trash-alt'></i></a></td>
         </tr>
         <tr *ngIf="users.length == 0">
